--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ react-app/build
 
 # misc
 react-app/.DS_Store
+react-app/.env
 react-app/.env.local
 react-app/.env.development.local
 react-app/.env.test.local
