adjusted form styling

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 
 # dependencies
 react-app/node_modules
-server/node_modules
 react-app/.pnp
 react-app/.pnp.js
 
@@ -23,3 +22,7 @@ react-app/.env.production.local
 react-app/npm-debug.log*
 react-app/yarn-debug.log*
 react-app/yarn-error.log*
+
+server/node_modules
+
+node_modules
